adding account and other department

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -16,6 +16,7 @@
           <th>Date of Birth</th>
           <th>Guardian</th>
           <th>Department</th>
+          <th>Other Department</th>
           <th>Disability</th>
           <th>Gender</th>
           <th>Understand English</th>
@@ -37,6 +38,7 @@
           <td> {{datOfBirth}}</td>
           <td> {{guardian}}</td>
           <td> {{department}}</td>
+          <td> {{otherdept}}</td>
           <td> {{disability}}</td>
           <td> {{gender}}</td>
           <td> {{speakEnglish}}</td>
